# cables_detection

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
launch/: fastdlo_detector_server.launch  run_dlo3ds.launch
scripts/: centroid_arucoserver.py  dlo3ds_pipeline.py  fastdlo_detection.py  fastdlo_server.py  mbest_detection.py
scripts/dlo3ds_core/: reconstruction.py
scripts/fastdlo_core/: core.py  fastdlo.py
scripts/fastdlo_core/proc/: utils.py
scripts/fastdlo_core/seg_net/: predict.py
scripts/mBEST_core/: run.py  run_detection.py
scripts/mBEST_core/mBEST/: mBEST.py
scripts/mBEST_core/mBEST/skeletonize/: skeletonize.c
srv/: Cable2D_Poses.srv  Cables2D_Poses.srv
