<?xml version="1.0"?>
<package format="2">
  <name>cables_detection</name>
  
  <version>0.0.0</version>
  
  <description>The cables detection package</description>
  
  <maintainer email="255778@studenti.unimore.it">kevin</maintainer>

  <license>License Apache V2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib </depend>
  <depend>actionlib_msgs</depend>
  <depend>cv_bridge </depend>
  <depend>fiducial_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>message_generation</depend>
  <!-- <depend>moveit_msgs</depend>
  <depend>moveit_visual_tools</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend> -->
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs </depend>
  <depend>xmlrpcpp</depend>

</package>
